# mastercard-challenge-solution

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.base  Dockerfile.dev  Dockerfile.prod
docs/: API_SPECIFICATION.md  Notes.md  api_spec.json
src/: __init__.py  main.py  original.main.py
src/dependencies/: repository.py
src/models/: account.py  health.py
src/repositories/: base.py  memory.py
src/routers/: accounts.py  health.py
tests/: conftest.py  test_api.py  test_essential.py  test_repository.py  test_repository_factory.py
