[project]
name = "accounts-api"
version = "1.0.0"
description = "FSC DevOps take home test - RESTful Accounts API"
authors = [
    {name = "Afshin Sabahi", email = "sabafshin@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12,<0.116.0",
    "pydantic>=2.11.5,<3.0.0",
    "uvicorn[standard]>=0.32.1,<1.0.0",
    "python-multipart>=0.0.16,<1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.1",
    "pytest-cov>=6.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."
